--- a/hammers/hammers-english.html
+++ b/hammers/hammers-english.html
@@ -271,8 +271,8 @@
         Authors: <a href="http://www.shsforums.net/user/5803-miloch/">Miloch</a> and <a href="http://www.shsforums.net/user/10485-sam/">Sam.</a></p>
         <p class="about">
           <a href="http://www.shsforums.net/topic/34099-thrown-hammers/">Mod Forum</a> &#8226;
-          <a href="http://www.shsforums.net/files/file/654-thrown-hammers-v3/">Download</a> &#8226;
-          Version 4
+          <a href="http://www.shsforums.net/files/file/654-thrown-hammers-v4/">Download</a> &#8226;
+          Version 4.1
         </p>
         <hr />
         <p class="menu">
@@ -656,6 +656,10 @@
           <h2>
             Version History
           </h2>
+          <h6>Version 4.1: 15 Sep 2014</h6>
+          <ul>
+            <li>Fixed a critical patching error on BG1 and IWD games</li>
+          </ul>
           <h6>Version 4: 17 Aug 2014</h6>
           <ul>
             <li>Updated Polish translation</li>
