--- a/hammers/hammers-french.html
+++ b/hammers/hammers-french.html
@@ -272,8 +272,8 @@
         </p>
 		<p class="about">
           <a href="http://www.shsforums.net/topic/34099-thrown-hammers/">Forum du mod</a> &bull;
-          <a href="http://www.shsforums.net/files/file/654-thrown-hammers-v3/">T&eacute;l&eacute;chargement</a>
-          &bull; Version 4
+          <a href="http://www.shsforums.net/files/file/654-thrown-hammers-v4/">T&eacute;l&eacute;chargement</a>
+          &bull; Version 4.1
         </p>
 		<hr />
 		<p class="menu">
@@ -594,6 +594,10 @@ citant pas la source (mais il est plus correct de cr&eacute;diter les auteurs).
         <div class="content">   
         <h2>Historique
         </h2>
+          <h6>Version 4.1: 15 Sep 2014</h6>
+          <ul>
+            <li>Fixed a critical patching error on BG1 and IWD games</li>
+          </ul>
           <h6>Version 4: 17 Aout 2014</h6>
           <ul>
             <li>Mettre &agrave; jour Polish traduction</li>
