update English readme to note GitHub URLs and updated French translation

--- a/hammers/hammers-english.html
+++ b/hammers/hammers-english.html
@@ -272,7 +272,7 @@
         </p>
         <p class="about">
           <a href="http://www.shsforums.net/topic/34099-thrown-hammers/">Mod Forum</a> &#8226;
-          <a href="http://www.shsforums.net/files/file/654-thrown-hammers-v4/">Download</a> &#8226;
+          <a href="https://github.com/Sampsca/ThrownHammers">Download</a> &#8226;
           Version 5.0
         </p>
         <hr>
@@ -501,9 +501,10 @@
           <h2>
             Version History
           </h2>
-          <h6>Version 5.0: 00 Jan 2016</h6>
+          <h6>Version 5.0: <a href="https://github.com/Sampsca/ThrownHammers">on GitHub</a></h6>
           <ul>
             <li>Added compatibility for EE-based games</li>
+            <li>Updated French translation</li>
           </ul>
           <h6>Version 4.1: 15 Sep 2014</h6>
           <ul>
