--- a/hammers/hammers-english.html
+++ b/hammers/hammers-english.html
@@ -273,7 +273,7 @@
         <p class="about">
           <a href="http://www.shsforums.net/topic/34099-thrown-hammers/">Mod Forum</a> &#8226;
           <a href="https://github.com/Sampsca/ThrownHammers">Download</a> &#8226;
-          Version 5.0
+          Version 6.0
         </p>
         <hr>
         <p class="menu">
@@ -458,7 +458,7 @@
           </h2>
           <span class="t1">Animations:</span> <span class="t2">Sam.</span><br>
           <span class="t1">Coding:</span> <span class="t2">Miloch</span><br>
-          <span class="t1">Coding updates:</span> <span class="t2">K4thos</span><br>
+          <span class="t1">Code contributions:</span> <span class="t2">K4thos and Sam.</span><br>
           <span class="t1">Item ideas:</span> <span class="t2">Lord Delekhan</span><br>
           <span class="t1">German translation:</span> <span class="t2">R&uuml;bezahl and Leomar</span><br>
           <span class="t1">French translation:</span> <span class="t2">Le Marquis (of the d'Oghmatiques)</span><br>
@@ -501,6 +501,18 @@
           <h2>
             Version History
           </h2>
+          <h6>Version 6.0: <a href="https://github.com/Sampsca/ThrownHammers">on GitHub</a></h6>
+          <ul>
+            <li>Modified BAM trans and shadow colors to conform to standard</li>
+            <li>Corrected errors in game+engine identification routines</li>
+            <li>Corrected many description icon errors</li>
+            <li>Ensure all BAMs are installed when used</li>
+            <li>Throwing hammers now use proper ground icon</li>
+            <li>Throwing hammers using Dwarven Thrower icon now use proper description icon</li>
+            <li>SoD now uses dark themed description icons</li>
+            <li>Improved BAM compression</li>
+            <li>Other minor tweaks to code and content</li>
+          </ul>
           <h6>Version 5.0: <a href="https://github.com/Sampsca/ThrownHammers">on GitHub</a></h6>
           <ul>
             <li>Added compatibility for EE-based games</li>
