update French translation (Gwendolyne)

--- a/hammers/hammers-english.html
+++ b/hammers/hammers-english.html
@@ -397,7 +397,7 @@
           <span class="t1">Code contributions:</span> <span class="t2">K4thos and Sam.</span><br>
           <span class="t1">Item ideas:</span> <span class="t2">Lord Delekhan</span><br>
           <span class="t1">German translation:</span> <span class="t2">R&uuml;bezahl and Leomar</span><br>
-          <span class="t1">French translation:</span> <span class="t2">Le Marquis (of the d'Oghmatiques)</span><br>
+          <span class="t1">French translation:</span> <span class="t2">Le Marquis (of the d'Oghmatiques) and Gwendolyne</span><br>
           <span class="t1">Spanish translation:</span> <span class="t2">Ancalagon el Negro</span><br>
           <span class="t1">Italian translation:</span> <span class="t2">Stoneangel and ilot</span><br>
           <span class="t1">Russian translation:</span> <span class="t2">prowler, noiseless, hawkmoon, and nikzy</span><br>
@@ -472,7 +472,7 @@
             <li>Added Classic Adventures compatibility</li>
             <li>Added install order-independent Ashes of Embers compatibility</li>
             <li>Added component to make throwing hammers available at shops that sell throwing axes</li>
-            <li>Added component to make +1 throwing weapons available at shopsthat sell magical projectiles</li>
+            <li>Added component to make +1 throwing weapons available at shops that sell magical projectiles</li>
             <li>Made extra magical items separate component</li>
             <li>Patched Spiritual Hammers and Aegis-Fang to add ranged abilities if not present</li>
             <li>Changed item names to avoid conflict with Dark Horizons</li>
