fix issues with images in French readme

--- a/hammers/hammers-french.html
+++ b/hammers/hammers-french.html
@@ -273,7 +273,7 @@
         <p class="about">
           <a href="http://www.shsforums.net/topic/34099-thrown-hammers/">Forum du mod</a> &#8226;
           <a href="http://www.shsforums.net/files/file/654-thrown-hammers-v4/">Téléchargement</a> &#8226;
-          Version 5.0
+          Version 6.0
         </p>
         <hr>
         <p class="menu">
@@ -296,21 +296,21 @@
             Dans les jeux basés sur l'Infinity engine, plusieurs marteaux de guerre peuvent être lancés, dont le marteau des nains +3 et Aegis-Fang. Bien qu'ils soient des marteaux, lorsqu'il sont lancés, ils apparaissent à l'écran comme des haches fendant l'air. Cette modification rajoute des animations pour que les marteaux lancés apparaissent vraiment comme tels et pas comme des haches. Tout marteau de jet créé par un autre mod bénéficiera également d'une animation appropriée.
           </p>
           <p class="c1">
-            <img src="hammers/hammer.gif" width="420" height="120" alt="Marteau Spirituel">
+            <img src="images/hammer.gif" width="420" height="120" alt="Marteau Spirituel">
           </p>
           <p>
             Un composant optionnel ajoute une animation spécifique au sort Marteau Spirituel, voir ci-dessus. D'autres composants optionnels ajoutent des marteaux de jet normaux, des armes de jet +1 et quelques objets magiques dont la dague de Meraera, le marteau de Gethlun et le marteau d'Essembra. Ce sont des objets uniques qui seront mis en vente dans des magasins tirés au hasard, si vous installez le composant "objets magiques supplémentaires".
           </p>
           <p>
-            <img src="hammers/t-aegisi.gif" width="51" height="45" alt="Aegis-Fang">
-            <img src="hammers/t-iham06.gif" width="58" height="53" alt="Marteau des Nains +3">
-            <img src="hammers/t-iham03.gif" width="45" height="34" alt="Marteau de jet">
-            <img src="hammers/t-iham04.gif" width="43" height="37" alt="Marteau de jet +1">
-            <img src="hammers/t-iaxe01.gif" width="48" height="45" alt="Hache de jet +1">
-            <img src="hammers/t-tdag03.gif" width="30" height="28" alt="Dague de jet +1">
-            <img src="hammers/t-idag02.gif" width="34" height="32" alt="Dague de Meraera">
-            <img src="hammers/t-iham01.gif" width="53" height="50" alt="Marteau de Gethlun">
-            <img src="hammers/t-iham02.gif" width="62" height="62" alt="Marteau d'Essembra">
+            <img src="images/t-aegisi.gif" width="51" height="45" alt="Aegis-Fang">
+            <img src="images/t-iham06.gif" width="58" height="53" alt="Marteau des Nains +3">
+            <img src="images/t-iham03.gif" width="45" height="34" alt="Marteau de jet">
+            <img src="images/t-iham04.gif" width="43" height="37" alt="Marteau de jet +1">
+            <img src="images/t-iaxe01.gif" width="48" height="45" alt="Hache de jet +1">
+            <img src="images/t-tdag03.gif" width="30" height="28" alt="Dague de jet +1">
+            <img src="images/t-idag02.gif" width="34" height="32" alt="Dague de Meraera">
+            <img src="images/t-iham01.gif" width="53" height="50" alt="Marteau de Gethlun">
+            <img src="images/t-iham02.gif" width="62" height="62" alt="Marteau d'Essembra">
          </p>
           <address>
             <span class="footer">Marteaux de jet &gt; Introduction</span> &#8226;<a href="#top">Haut de page</a>
