Improve SoD theme support

--- a/hammers/hammers-english.html
+++ b/hammers/hammers-english.html
@@ -273,7 +273,7 @@
         <p class="about">
           <a href="http://www.shsforums.net/topic/34099-thrown-hammers/">Mod Forum</a> &#8226;
           <a href="https://github.com/Sampsca/ThrownHammers">Download</a> &#8226;
-          Version 6.0
+          Version 6.1.0
         </p>
         <hr>
         <p class="menu">
@@ -433,6 +433,15 @@
         <a id="version"></a>
         <div class="content">
           <h2>Version History</h2>
+          <h6>Version 6.1.0: <a href="https://github.com/Sampsca/ThrownHammers">on GitHub</a></h6>
+          <ul>
+            <li>Improve SoD theme support</li>
+            <li>Fix issues with images in French readme</li>
+            <li>Update French translation (Gwendolyne) (v6.0.3)</li>
+            <li>Updated readme backend</li>
+            <li>Fix projectile assignment for EET (v6.0.2)</li>
+            <li>Corrected tooltip.2da column parsing bug (v6.0.1)</li>
+          </ul>
           <h6>Version 6.0: <a href="https://github.com/Sampsca/ThrownHammers">on GitHub</a></h6>
           <ul>
             <li>Modified BAM trans and shadow colors to conform to standard</li>
