Update French readme (v.6.1.0)
Update Versions History
Update Download link (GitHub instead of SHS)
Fix minor spellings

--- a/hammers/hammers-french.html
+++ b/hammers/hammers-french.html
@@ -272,8 +272,8 @@
         </p>
         <p class="about">
           <a href="http://www.shsforums.net/topic/34099-thrown-hammers/">Forum du mod</a> &#8226;
-          <a href="http://www.shsforums.net/files/file/654-thrown-hammers-v4/">Téléchargement</a> &#8226;
-          Version 6.0
+          <a href="https://github.com/Sampsca/ThrownHammers">Téléchargement</a> &#8226;
+          Version 6.1.0
         </p>
         <hr>
         <p class="menu">
@@ -293,13 +293,13 @@
         <div class="content">
           <h2>Introduction</h2>
           <p>
-            Dans les jeux basés sur l'Infinity engine, plusieurs marteaux de guerre peuvent être lancés, dont le marteau des nains +3 et Aegis-Fang. Bien qu'ils soient des marteaux, lorsqu'il sont lancés, ils apparaissent à l'écran comme des haches fendant l'air. Cette modification rajoute des animations pour que les marteaux lancés apparaissent vraiment comme tels et pas comme des haches. Tout marteau de jet créé par un autre mod bénéficiera également d'une animation appropriée.
+            Dans les jeux basés sur l'Infinity engine, plusieurs marteaux de guerre peuvent être lancés, dont le marteau des nains +3 et Aegis-Fang. Bien qu'ils soient des marteaux, lorsqu'il sont lancés, ils apparaissent à l'écran comme des haches fendant l'air. Ce mod ajoute des animations pour que les marteaux lancés apparaissent vraiment comme tels et pas comme des haches. Tout marteau de jet créé par un autre mod bénéficiera également d'une animation appropriée.
           </p>
           <p class="c1">
             <img src="images/hammer.gif" width="420" height="120" alt="Marteau Spirituel">
           </p>
           <p>
-            Un composant optionnel ajoute une animation spécifique au sort Marteau Spirituel, voir ci-dessus. D'autres composants optionnels ajoutent des marteaux de jet normaux, des armes de jet +1 et quelques objets magiques dont la dague de Meraera, le marteau de Gethlun et le marteau d'Essembra. Ce sont des objets uniques qui seront mis en vente dans des magasins tirés au hasard, si vous installez le composant "objets magiques supplémentaires".
+            Un composant optionnel ajoute une animation spécifique au sort Marteau Spirituel, voir ci-dessus. D'autres composants optionnels ajoutent des marteaux de jet normaux, des armes de jet +1 et quelques objets magiques dont la dague de Meraera, le marteau de Gethlun et le marteau d'Essembra. Ce sont des objets uniques qui seront mis en vente dans des magasins tirés au hasard, si vous installez le composant « objets magiques supplémentaires ».
           </p>
           <p>
             <img src="images/t-aegisi.gif" width="51" height="45" alt="Aegis-Fang">
@@ -322,13 +322,13 @@
         <div class="content">
           <h2>Compatibilité</h2>
           <p>
-            Ce mod fonctionne avec n'importe quel jeu utilisant l'Infinity Engine, hormis <abbr title="Planescape: Torment">PS:T</abbr>. Les nouveaux marteaux de jet n'apparaîtront toutefois que dans les jeux fonctionnant avec le moteur de <abbr title="Baldur's Gate II">BG2</abbr>, car les identificateurs de projectiles semblent être codés "en dur" dans les autres jeux. Assurez-vous que vous avez installé le patch le plus récent. Vérifiez les fichiers lisez-moi relatifs au patch dans le répertoire de votre jeu, et sur le site web de <a href="http://www.bioware.com/support/games/">BioWare</a> ou de  <a href="http://www.beamdog.com/">Beamdog</a> si nécessaire.
+            Ce mod fonctionne avec n'importe quel jeu utilisant l'Infinity Engine, hormis <abbr title="Planescape: Torment">PS:T</abbr>. Les nouveaux marteaux de jet n'apparaîtront toutefois que dans les jeux fonctionnant avec le moteur de <abbr title="Baldur's Gate II">BG2</abbr>, car les identificateurs de projectiles semblent être codés « en dur » dans les autres jeux. Assurez-vous que vous avez installé le patch le plus récent. Vérifiez les fichiers lisez-moi relatifs au patch dans le répertoire de votre jeu, et sur le site web de <a href="http://www.bioware.com/support/games/">BioWare</a> ou de  <a href="http://www.beamdog.com/">Beamdog</a> si nécessaire.
           </p>
           <p>
             Ce mod est également compatible avec les autres mods, y compris <a href="http://www.pocketplane.net/tutu/">Baldur's Gate Tutu</a> (et EasyTutu), <a href="http://www.shsforums.net/forum/261-bgt-weidu/">Baldur's Gate Trilogy</a> et <a href="http://gibberlings3.net/forums/index.php?showforum=195">Enhanced Edition Trilogy</a>. Marteaux de jet est également compatible avec le méga-mod <a href="http://classicadventuresmod.com/">Classic Adventures</a>. Vous pouvez installer ce mod pendant une partie en cours, mais certains objets risquent d'être inaccessibles ; il faudra commencer une nouvelle partie pour les obtenir.
           </p>
           <p>
-            Ce mod doit être installé après les autres mods qui ajoutent ou modifient les marteaux (y compris le sort Marteau Spirituel) et avant les procédures finales de "biffing". Il faut également l'installer après les mods qui remplacent les ressources du jeu au lieu de les modifier.
+            Ce mod doit être installé après les autres mods qui ajoutent ou modifient les marteaux (y compris le sort Marteau Spirituel) et avant les procédures finales de « biffing ». Il faut également l'installer après les mods qui remplacent les ressources du jeu au lieu de les modifier.
           </p>
           <p>
             Si vous souhaitez que les armes de ce mod utilisent les modifications de règles du mod <a href="http://www.pocketplane.net/aoe/">Ashes of Embers</a>, installer Marteaux de jet avant ou après <abbr title="Ashes of Embers">AoE</abbr> n'a aucune importance. Si toutefois vous souhaitez que les modifications des armes du mod <a href="http://www.gibberlings3.net/level1npcs/">Level 1 NPCs</a> s'appliquent, alors installez ce mod après Marteaux de jet.
@@ -344,7 +344,7 @@
           <h2>Installation</h2>
           <p>
             <em>
-              <strong>Remarque :</strong> si une ancienne version de ce mod est déjà installée, désinstallez-la avant d'extraire la nouvelle version. Pour cela, lancez <strong>setup-hammers.exe</strong> (ou .command), désinstallez tous les composants déjà présents et supprimez le répertoire "hammers". Lorsque vous installez ou désinstallez, ne fermez pas la fenêtre <acronym title="Disk Operating System">DOS</acronym> en cliquant sur le bouton <strong>X</strong>&nbsp;! Au lieu de cela, appuyez sur la touche <strong>Entrée</strong> quand cette option vous est proposée.
+              <strong>Remarque :</strong> si une ancienne version de ce mod est déjà installée, désinstallez-la avant d'extraire la nouvelle version. Pour cela, lancez <strong>setup-hammers.exe</strong> (ou .command), désinstallez tous les composants déjà présents et supprimez le répertoire « hammers ». Lorsque vous installez ou désinstallez, ne fermez pas la fenêtre <acronym title="Disk Operating System">DOS</acronym> en cliquant sur le bouton <strong>X</strong>&nbsp;! Au lieu de cela, appuyez sur la touche <strong>Entrée</strong> quand cette option vous est proposée.
             </em>
           </p>
           <p>
@@ -355,14 +355,14 @@
           </p>
           <h4>Windows</h4>
           <p>
-            Extrayez le contenu du mod dans le répertoire du jeu que vous souhaitez modifier. Si l'extraction s'est déroulée correctement, un répertoire "hammers" et un fichier setup-hammers.exe doivent être apparus dans le répertoire du jeu. Pour installer le mod, double-cliquez sur <strong>setup-hammers.exe</strong> et suivez les instructions apparaissant à l'écran.
+            Extrayez le contenu du mod dans le répertoire du jeu que vous souhaitez modifier. Si l'extraction s'est déroulée correctement, un répertoire « hammers » et un fichier setup-hammers.exe doivent être apparus dans le répertoire du jeu. Pour installer le mod, double-cliquez sur <strong>setup-hammers.exe</strong> et suivez les instructions apparaissant à l'écran.
           </p>
           <p>
             Pour réinstaller, désinstaller ou changer certains composants, lancez <strong>setup-hammers.exe</strong> dans votre répertoire du jeu.
           </p>
           <h4>Mac OS X</h4>
           <p>
-            Extrayez le contenu du mod dans le répertoire du jeu que vous souhaitez modifier. Si l'extraction s'est déroulée correctement, un sous-répertoire "hammers" doit être apparu dans le répertoire du jeu. Téléchargez la version OS X de <a href="http://weidu.org/~thebigg/"><abbr title="Weimer Dialogue Utility">WeiDU</abbr></a> (ou alors copiez un autre installateur de mods) et renommez-le <strong>setup-hammers</strong>. Placez ce fichier ainsi que le fichier <strong>setup-hammers.command</strong> dans le sous-répertoire "hammers". Pour installer le mod, double-cliquez sur <strong>setup-hammers.command</strong> et suivez les instructions apparaissant à l'écran.
+            Extrayez le contenu du mod dans le répertoire du jeu que vous souhaitez modifier. Si l'extraction s'est déroulée correctement, un sous-répertoire « hammers » doit être apparu dans le répertoire du jeu. Téléchargez la version OS X de <a href="http://weidu.org/~thebigg/"><abbr title="Weimer Dialogue Utility">WeiDU</abbr></a> (ou alors copiez un autre installateur de mods) et renommez-le <strong>setup-hammers</strong>. Placez ce fichier ainsi que le fichier <strong>setup-hammers.command</strong> dans le sous-répertoire « hammers ». Pour installer le mod, double-cliquez sur <strong>setup-hammers.command</strong> et suivez les instructions apparaissant à l'écran.
           </p>
           <h4>Linux</h4>
           <p>
@@ -370,7 +370,7 @@
           </p>
           <p>
             <em>
-              Facultatif : lancez 'tolower' et répondez oui ("Y") aux deux requêtes. Il n'est pas nécessaire d'exécuter la deuxième option (linux.ini) si vous l'avez déjà exécutée une fois dans le même répertoire. Pour gagner du temps, l'archive est déjà "tolower-isée", il n'y a donc pas non plus besoin d'exécuter la première option (passage des noms de fichiers en minuscules) si vous n'avez extrait que ce mod depuis la dernière fois que vous avez passé des noms de fichiers en minuscules. Si vous n'êtes pas certain, il vaut mieux exécuter tolower et accepter les deux options.
+              Facultatif : lancez 'tolower' et répondez oui ("Y") aux deux requêtes. Il n'est pas nécessaire d'exécuter la deuxième option (linux.ini) si vous l'avez déjà exécutée une fois dans le même répertoire. Pour gagner du temps, l'archive est déjà « tolower-isée », il n'y a donc pas non plus besoin d'exécuter la première option (passage des noms de fichiers en minuscules) si vous n'avez extrait que ce mod depuis la dernière fois que vous avez passé des noms de fichiers en minuscules. Si vous n'êtes pas certain, il vaut mieux exécuter tolower et accepter les deux options.
             </em>
           </p>
           <p>
@@ -392,7 +392,7 @@
           </p>
           <h4>Thrown Hammers (marteaux de jet)</h4>
           <p>            
-            Il s'agit du composant principal. Il installe les animations des marteaux (il existe des versions bleue, verte, grise, marron ou orange). Il patche également Aegis-Fang, le Marteau des nains, les marteaux spirituels ainsi que tout marteau de jet créé par un mod, et leur applique la nouvelle animation chaque fois que c'est nécessaire.
+            Il s'agit du composant principal. Il installe les animations des marteaux (il existe des versions bleue, verte, grise, marron ou orange). Il patche également Aegis-Fang, le Marteau des nains, les marteaux spirituels ainsi que tout marteau de jet créé par les autres mods, et leur attribue une nouvelle animation chaque fois que c'est nécessaire.
           </p>
           <h4>Thrown Spiritual Hammers (marteaux spirituels lancés)</h4>
           <p>            
@@ -501,13 +501,22 @@
           <h2>
             Historique
           </h2>
+          <h6>Version 6.1.0 : sur <a href="https://github.com/Sampsca/ThrownHammers">GitHub</a></h6>
+          <ul>
+            <li>Amélioration de la prise en compte de l'interface de SoD.</li>
+            <li>Correction de l'affichage des images dans le readme français.</li>
+            <li>Mise à jour de la traduction française (Gwendolyne) (v6.0.3)</li>
+            <li>Mise ç jour du format des fichiers readme.</li>
+            <li>Correction de l’affectation des projectiles dans EET (v6.0.2).</li>
+            <li>Correction du bogue lié au format de colonne dans le fichier tooltip.2da (v6.0.1).</li>
+          </ul>
           <h6>Version 6.0 : sur <a href="https://github.com/Sampsca/ThrownHammers">GitHub</a></h6>
           <ul>
             <li>Modification des couleurs de transparence et d'ombre des fichiers BAM pour les rendre conformes aux standards du jeu.</li>
             <li>Correction d'erreurs dans les procédures d'identification du jeu ou du moteur.</li>
             <li>Correction de nombreuses erreurs concernant les icônes de description.</li>
             <li>Le mod s'assure que les fichiers BAM sont bien installés lorsqu'ils sont nécessaires.</li>
-            <li>Les marteaux de jets disposent dorénavant d'une icône au sol spécifique.</li>
+            <li>Les marteaux de jet disposent dorénavant d'une icône au sol spécifique.</li>
             <li>Les marteaux de jet utilisant l'icône du Marteau des Nain disposent désormais d'une icône de description appropriée.</li>
             <li>Si SoD est installé, le mod utilise désormais ses icônes de description foncées .</li>
             <li>Amélioration de l'algorithme de compression des fichiers BAM.</li>
@@ -518,17 +527,17 @@
             <li>Ajout de la compatibilité avec les versions Édition Améliorée des jeux.</li>
             <li>Mise à jour de la traduction française.</li>
           </ul>
-          <h6>Version 4.1 : 15 Septembre 2014</h6>
+          <h6>Version 4.1 : 15 septembre 2014</h6>
           <ul>
             <li>Correction d'une erreur critique de "patching" intervenant avec les jeux BG1 et IWD</li>
           </ul>
-          <h6>Version 4 : 17 Août 2014</h6>
+          <h6>Version 4 : 17 août 2014</h6>
           <ul>
             <li>Mise à jour de la traduction polonaise.</li>
             <li>Mise à jour de WeiDU.</li>
           </ul>
           <h6>
-            Version 3 : 31 Octobre 2010
+            Version 3 : 31 octobre 2010
           </h6>
           <ul>
             <li>Correction d'un bogue empêchant d'utiliser les marteaux spirituels comme armes de jet.</li>
@@ -536,7 +545,7 @@
             <li>Modification de la vérification de compatibilité pour permettre d'installer les composants optionnels sur plusieurs sessions.</li>
           </ul>
           <h6>
-            Version 2 : 1er Février 2010
+            Version 2 : 1er février 2010
           </h6>
           <ul>
             <li>Ajout des traductions allemande, française, espagnole, italienne et russe.</li>
@@ -551,7 +560,7 @@
             <li>Ajout de la compatibilité avec <abbr title="Baldur's Gate Trilogy">BGT</abbr>/<abbr title="BiG World Project">BWP</abbr> et les autres mods.</li>
           </ul>
           <h6>
-            Version 1 : 11 Juin 2008
+            Version 1 : 11 juin 2008
           </h6>
           <ul>
             <li>Sortie initiale.</li>
