add lang flags to readmes

--- a/hammers/hammers-english.html
+++ b/hammers/hammers-english.html
@@ -264,6 +264,7 @@
     <div id="wrap">
       <div id="header">
         <a id="top"></a>
+        <a href="hammers-french.html"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAVCAIAAACor3u9AAAAM0lEQVR4AWNgUJ6KE0n0h+bs+I8XfC6qfSOn/1bTEhcaHBaMWjBqwagFoxaMWjBqwagFAMe0YMndHT2xAAAAAElFTkSuQmCC" width="32" height="21" alt="version française" style="float:right;margin-right:10px;margin-top:30px;"></a>
         <h1>Thrown Hammers</h1>
         <strong>A Spellhold Studios mod for virtually any Infinity Engine game (including the Enhanced Editions) except <abbr title="Planescape: Torment">PS:T</abbr></strong>
         <hr>
@@ -273,7 +274,7 @@
         <p class="about">
           <a href="http://www.shsforums.net/topic/34099-thrown-hammers/">Mod Forum</a> &#8226;
           <a href="https://github.com/Sampsca/ThrownHammers">Download</a> &#8226;
-          Version 6.1.0
+          Version 6.1.1
         </p>
         <hr>
         <p class="menu">
@@ -433,6 +434,10 @@
         <a id="version"></a>
         <div class="content">
           <h2>Version History</h2>
+          <h6>Version 6.1.1: <a href="https://github.com/Sampsca/ThrownHammers">on GitHub</a></h6>
+          <ul>
+            <li>add lang flags to readmes</li>
+          </ul>
           <h6>Version 6.1.0: <a href="https://github.com/Sampsca/ThrownHammers">on GitHub</a></h6>
           <ul>
             <li>Improve SoD theme support</li>
