update readme and version

--- a/hammers/hammers-english.html
+++ b/hammers/hammers-english.html
@@ -274,7 +274,7 @@
         <p class="about">
           <a href="http://www.shsforums.net/topic/34099-thrown-hammers/">Mod Forum</a> &#8226;
           <a href="https://github.com/Sampsca/ThrownHammers">Download</a> &#8226;
-          Version 6.1.1
+          Version 6.1.2
         </p>
         <hr>
         <p class="menu">
@@ -318,7 +318,7 @@
           <h2>Compatibility</h2>
           <p>This mod works with any Infinity Engine game except <abbr title="Planescape: Torment">PS:T</abbr>. However, the new hammer projectiles will only appear for games based on the <abbr title="Baldur's Gate II">BG2</abbr> engine, since projectile identifiers seem to be hardcoded in other games. Make sure your game has the latest patch. Check the ReadMe files related to your patch in your game folder and the <a href="http://www.bioware.com/en/games/">BioWare</a> or <a href="http://www.beamdog.com/">Beamdog</a> website if necessary.</p>
           <p>This mod will also work with all mods, including <a href="http://www.pocketplane.net/tutu/">Baldur's Gate Tutu</a> (and EasyTutu), <a href="http://www.shsforums.net/forum/261-bgt-weidu/">Baldur's Gate Trilogy</a>, and <a href="http://gibberlings3.net/forums/index.php?showforum=195">Enhanced Edition Trilogy</a>. Thrown Hammers is also compatible with the total conversion <a href="http://classicadventuresmod.com/">Classic Adventures</a>. You can install this mod during an existing game, though you may miss some items unless you start a new game.</p>
-          <p>This mod should go after other mods that add or change hammers (including the Spiritual Hammer spell) and before final "biffing" routines. It should also go after mods that overwrite rather than patch game resources.</p>
+          <p>This mod should go after other mods that add or change hammers, including the Spiritual Hammer spell. This includes aTweaks and Spell Revisions. It should go before final "biffing" routines and EET_end. It should also go after mods that overwrite rather than patch game resources.</p>
           <p>If you want the (few) weapons in this mod to take the "Sensible Weapon Restrictions" from <a href="http://www.pocketplane.net/aoe/">Ashes of Embers</a>, it doesn't matter whether you install Thrown Hammers before or after <abbr title="Ashes of Embers">AoE</abbr>. If you want the similar weapon tweaks in <a href="http://www.gibberlings3.net/level1npcs/">Level 1 NPCs</a>, however, install the latter mod after Thrown Hammers.</p>
           <address>
             <span class="footer">Thrown Hammers &gt; Compatibility</span> &#8226;<a href="#top">Back To Top</a>
@@ -434,6 +434,13 @@
         <a id="version"></a>
         <div class="content">
           <h2>Version History</h2>
+          <h6>Version 6.1.2: <a href="https://github.com/Sampsca/ThrownHammers">on GitHub</a></h6>
+          <ul>
+            <li>Add metadata for Project Infinity</li>
+            <li>Set globally unique labels</li>
+            <li>Enable InfinityAutoPackager</li>
+            <li>Additional installation ordering instructions</li>
+          </ul>
           <h6>Version 6.1.1: <a href="https://github.com/Sampsca/ThrownHammers">on GitHub</a></h6>
           <ul>
             <li>add lang flags to readmes</li>
